--- a/seed/Cargo.toml
+++ b/seed/Cargo.toml
@@ -12,6 +12,7 @@ futures = "0.3"
 tokio = "0.2"
 tracing = "0.1"
 tracing-subscriber = "0.2"
+warp = { version = "0.2.5", default-features = false }
 
 [dependencies.librad]
 git = "https://github.com/radicle-dev/radicle-link.git"
