--- a/seed/Cargo.toml
+++ b/seed/Cargo.toml
@@ -9,10 +9,11 @@ license = "GPL-3.0-or-later"
 argh = "0.1.3"
 chrono = "0.4"
 futures = "0.3"
-tokio = "0.2"
+tokio = { version = "0.2", features = ["sync"], default-features = false }
 tracing = "0.1"
 tracing-subscriber = "0.2"
 warp = { version = "0.2.5", default-features = false }
+serde_json = "1"
 
 [dependencies.librad]
 git = "https://github.com/radicle-dev/radicle-link.git"
