--- a/seed/ui/package.json
+++ b/seed/ui/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
+    "@rollup/plugin-replace": "^2.3.4",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.11.0",
     "eslint-plugin-svelte3": "^2.7.3",
