--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ members = ["keyutil", "seed"]
 #
 # Since we maintain a version-controlled `Cargo.lock` file, a `cargo update`
 # will pull in the latest versions. This should be done on a regular basis --
-# unless there's a specific reason not to do so for EVERY patch being submitted
+# unless there's a specific reason not to do so: for EVERY patch being submitted
 # to this repo.
 #
 # Usually, the `branch` specifiers below do not need to be changed, except when
