--- a/seed/ui/package.json
+++ b/seed/ui/package.json
@@ -28,6 +28,7 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "fuse.js": "^6.4.3",
     "twemoji": "^12.1.6",
     "twemoji-svg-assets": "https://github.com/radicle-dev/twemoji-svg-assets.git#v12.1.6"
   },
