fixup! Add bins step
Signed-off-by: Fintan Halpenny <fintan.halpenny@gmail.com>

--- a/.buildkite/pipeline.yaml
+++ b/.buildkite/pipeline.yaml
@@ -41,6 +41,6 @@ steps:
       - ".ci/bins"
     agents: *build-agent
     env: *build-docker
-    artifact-paths:
+    artifact_paths:
       - "target/release/radicle-keyutil"
       - "target/release/radicle-seed-node"
