Use BUILDKITE_TAG
We use BUILDKITE_TAG to add the tag version for the Docker image.

Signed-off-by: Fintan Halpenny <fintan.halpenny@gmail.com>

--- a/.buildkite/pipeline.yaml
+++ b/.buildkite/pipeline.yaml
@@ -34,4 +34,4 @@ steps:
     env:
       <<: *build-docker
       STEP_DOCKER_FILE: .docker/seed/Dockerfile
-      STEP_DOCKER_IMAGE: gcr.io/opensourcecoin/radicle-seed-node
+      STEP_DOCKER_IMAGE: gcr.io/opensourcecoin/radicle-seed-node:$BUILDKITE_TAG
