--- a/.docker/seed/Dockerfile
+++ b/.docker/seed/Dockerfile
@@ -1,7 +1,7 @@
 FROM debian:buster-slim
 RUN set -eux; \
-    curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -; \
-    echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list; \
+    curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -; \
+    echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list; \
     apt-get update; \
     apt-get install -y --no-install-recommends \
         ca-certificates \
