fixup! fixup! fixup! fixup! fixup! fixup! Build UI assets
Signed-off-by: Fintan Halpenny <fintan.halpenny@gmail.com>

--- a/.buildkite/pipeline.yaml
+++ b/.buildkite/pipeline.yaml
@@ -6,7 +6,7 @@ steps:
       production: "true"
       platform: "linux"
     env: &build-docker
-      DOCKER_IMAGE: "gcr.io/opensourcecoin/radicle-bins-build"
+    # DOCKER_IMAGE: "gcr.io/opensourcecoin/radicle-bins-build"
       DOCKER_FILE: .docker/build/Dockerfile
 
   - label: "Clippy Yeah Yeah Clippy Shlippy Yeah"
