--- a/seed/Cargo.toml
+++ b/seed/Cargo.toml
@@ -9,7 +9,8 @@ license = "GPL-3.0-or-later"
 argh = "0.1"
 chrono = "0.4"
 futures = "0.3"
-tokio = { version = "0.2", features = ["sync"], default-features = false }
+tokio = { version = "1.2", features = ["sync"], default-features = false }
+tokio-stream = "0.1"
 tracing = "0.1"
 tracing-subscriber = "0.2"
 warp = { version = "0.2.5", default-features = false }
