--- a/seed/Cargo.toml
+++ b/seed/Cargo.toml
@@ -9,6 +9,7 @@ license = "GPL-3.0-or-later"
 argh = "0.1"
 chrono = "0.4"
 futures = "0.3"
+num_cpus = "1"
 tokio = { version = "1.2", features = ["sync"], default-features = false }
 tokio-stream = "0.1"
 tracing = "0.1"
