--- a/seed/Cargo.toml
+++ b/seed/Cargo.toml
@@ -9,10 +9,12 @@ license = "GPL-3.0-or-later"
 argh = "0.1"
 chrono = "0.4"
 futures = "0.3"
-tokio = { version = "0.2", features = ["sync"], default-features = false }
+num_cpus = "1"
+tokio = { version = "1.2", features = ["sync"], default-features = false }
+tokio-stream = "0.1"
 tracing = "0.1"
 tracing-subscriber = "0.2"
-warp = { version = "0.2.5", default-features = false }
+warp = { version = "0.3", default-features = false }
 serde_json = "1"
 serde = "1"
 
