--- a/seed/Cargo.toml
+++ b/seed/Cargo.toml
@@ -11,7 +11,7 @@ chrono = "0.4"
 futures = "0.3"
 nonempty = "0.6"
 num_cpus = "1"
-tokio = { version = "1.2", features = ["sync"], default-features = false }
+tokio = { version = "1.2", features = ["macros", "rt", "sync"], default-features = false }
 tokio-stream = "0.1"
 tracing = "0.1"
 tracing-subscriber = "0.2"
