--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,12 +24,20 @@ members = ["keyutil", "seed"]
 # development".
 [patch.crates-io.librad]
 git = "https://github.com/radicle-dev/radicle-link"
-branch = "xla/disable-rere"
+branch = "master"
 
 [patch.crates-io.radicle-seed]
 git = "https://github.com/radicle-dev/radicle-link"
-branch = "xla/disable-rere"
+branch = "master"
 
 [patch.crates-io.radicle-avatar]
 git = "https://github.com/radicle-dev/radicle-avatar"
 branch = "main"
+
+[patch.crates-io.git2]
+git = "https://github.com/radicle-dev/git2-rs.git"
+rev = "5971ca18d73eed39384193899177dfb7ac2d0a05"
+
+[patch.crates-io.libgit2-sys]
+git = "https://github.com/radicle-dev/git2-rs.git"
+rev = "5971ca18d73eed39384193899177dfb7ac2d0a05"
