ci: ensure container is built first
Signed-off-by: Fintan Halpenny <fintan.halpenny@gmail.com>

--- a/.buildkite/pipeline.yaml
+++ b/.buildkite/pipeline.yaml
@@ -1,13 +1,21 @@
 steps:
-  - label: "Build + Test"
+  - label: "Build container"
     commands:
-      - ".ci/build-test"
+      - ".buildkite/build-container"
     agents: &build-agent
       production: "true"
       platform: "linux"
     env: &build-docker
       DOCKER_IMAGE: "gcr.io/opensourcecoin/radicle-bins-build@sha256:e2eeaf902c16d88d029a95e0e7956a27ebf12b63dcdcdcaa81eb151670a14ded"
       DOCKER_FILE: .docker/build/Dockerfile
+
+  - wait
+
+  - label: "Build + Test"
+    commands:
+      - ".ci/build-test"
+    agents: *build-agent
+    env: *build-docker
 
   - label: "Clippy Yeah Yeah Clippy Shlippy Yeah"
     commands:
