--- a/seed/Cargo.toml
+++ b/seed/Cargo.toml
@@ -18,7 +18,12 @@ tracing-subscriber = "0.2"
 warp = { version = "0.3", default-features = false }
 serde_json = "1"
 serde = "1"
+tracing-stackdriver = { version = "0.1.0", optional = true }
 
 librad = "0"
 radicle-avatar = "0"
 radicle-seed = "0"
+
+[features]
+default = []
+gcp = ["tracing-stackdriver"]
