--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,3 +41,6 @@ rev = "ae027b9e7b125f56397bbb7d8652b3427deeede6"
 [patch.crates-io.libgit2-sys]
 git = "https://github.com/radicle-dev/git2-rs.git"
 rev = "ae027b9e7b125f56397bbb7d8652b3427deeede6"
+
+[profile.release]
+debug = true
