meta: Nuke rad crate
This has been swallowed whole by the new bins workspace in the link
repository, turn your gaze.

Signed-off-by: xla <self@xla.is>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["keyutil", "rad", "seed"]
+members = ["keyutil", "seed"]
 
 #
 # "Internal" source dependencies
@@ -23,10 +23,6 @@ members = ["keyutil", "rad", "seed"]
 # When in doubt, chant the following aloud one hundred times: "trunk based
 # development".
 [patch.crates-io.librad]
-git = "https://github.com/radicle-dev/radicle-link"
-branch = "master"
-
-[patch.crates-io.rad-exe]
 git = "https://github.com/radicle-dev/radicle-link"
 branch = "master"
 
