--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,11 +24,11 @@ members = ["keyutil", "seed"]
 # development".
 [patch.crates-io.librad]
 git = "https://github.com/radicle-dev/radicle-link"
-branch = "master"
+rev = "dcddbed934df5342460f658d1bb3a1d7a7a40af2"
 
 [patch.crates-io.radicle-seed]
 git = "https://github.com/radicle-dev/radicle-link"
-branch = "master"
+rev = "dcddbed934df5342460f658d1bb3a1d7a7a40af2"
 
 [patch.crates-io.radicle-avatar]
 git = "https://github.com/radicle-dev/radicle-avatar"
